<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/recipientField"
        android:layout_width="351dp"
        android:layout_height="51dp"
        android:background="#DDDDDD"
        android:ems="10"
        android:hint="@string/recipient_field_label"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/bodyInputField"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        app:layout_constraintBottom_toTopOf="@+id/bodyInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831"
        android:autofillHints="" />

    <EditText
        android:id="@+id/bodyInputField"
        android:layout_width="381dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:background="#DDDDDD"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/body_field_label"
        android:inputType="textShortMessage|text"
        android:nextFocusDown="@id/sendButton"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSend"
        android:text="@string/send_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodyInputField"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/composeNameHeader"
        android:layout_width="247dp"
        android:layout_height="73dp"
        android:gravity="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/recipientField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBack"
        android:text="@string/back_button_label"
        app:layout_constraintBottom_toTopOf="@+id/composeNameHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/composeErrorText"
        android:layout_width="232dp"
        android:layout_height="32dp"
        android:gravity="start|center_vertical"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/composeNameHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />
</androidx.constraintlayout.widget.ConstraintLayout>